0.7.0 Bertrand Janin <b@janin.com> (..........)

	* Switch to git-style command line with a command (e.g. mdp edit).
	* Passwords can now use character sets containing unicode.
	* Add aliases to common character_sets (e.g. $ALPHANUMERIC, $DIGITS).
	* Detect vim and add '-n' to avoid swap file creation.
	* Define a comment character for the password file (#).
	* Renamed query-mode to the prompt command.
	* Fix a bug where mdp would not detect a wrong directory permission.

0.6.0 Bertrand Janin <b@janin.com> (2014-01-10)

	* Add configurable profiles (-p) to the password generator (-g).
	* Fix pager display bug on long lines.
	* Fix a bug with mdp unable to properly detect a SIGINT sent to gpg.
	* Make gpg_key_id mandatory.
	* Add -l parameter to force the length of passwords.
	* Add -n parameter to force the number of passwords.
	* Add -k parameter to define the GnuPG key if missing from config.
	* Switch to semantic versioning.
	* Increase default GPG timeout to 20s (suggestion by Franck Labadille)
	* Build using -lncurses on Mac (ncursesw not available).
	* Use c99 boolean across the board.
	* Add additional compilation warnings.
	* Increase maximum line size to 16KB (both passwords and config).
	* Add framework for regression tests (and a couple modules).

0.5 Bertrand Janin <b@janin.com> (2013-08-01)

	* Added support for regex match using -E.
	* Added option to disable backup file generation.
	* Fix detection of unchanged files.
	* Fix creation of the initial password file.
	* Properly cleanup the lock if gpg times out.
	* Fix opening the editor if GnuPG failed (e.g. bad passphrase).

0.4 Bertrand Janin <b@janin.com> (2013-07-29)

	* Fixed compilation on openSUSE (by pbleser @ github).
	* Fix #4 (removal of EOLs on edit).

0.3 Bertrand Janin <b@janin.com> (2013-07-17)

	* Moved all source code to src/.
	* Fix query-mode.
	* Quadruple and unify the maximum allowable line size.
	* Configurable count of iteration when generating passwords.