@@ -1,6 +1,9 @@
 BUGS/IMMEDIATE
  - Should not be checking for file permissions until we have defined where
    these files should be.
+     * check the permissions of the password file folder, that requires
+       importing or implementing dirname()
+ - Make the functional test suite behave a little more like the regress set.
 
 SHORT TERM DEV
  - '-a' will add a password, taking a number of strings in order of argv and
