@@ -17,8 +17,6 @@
 #ifndef _GPG_H_
 #define _GPG_H_
 
-extern char	*gpg_passwords_path;
-
 FILE 		*gpg_open(void);
 int		 gpg_close(FILE *);
 void		 gpg_encrypt(const char *);
