@@ -6,7 +6,7 @@ base=`pwd`
 
 find . -name "Makefile.src" | while read path; do
 	directory=`dirname $path`
-	# echo "-- going into $directory"
+	echo "-- going into $directory"
 	cd $directory && make $1
 	cd $base
 done
