@@ -7,10 +7,10 @@
 
 
 static int
-config_check_directory_wrapper(char **av)
+config_ensure_directory_wrapper(char **av)
 {
 	char *dirname = av[2];
-	config_check_directory(dirname);
+	config_ensure_directory(dirname);
 	return EXIT_SUCCESS;
 }
 
@@ -30,8 +30,8 @@ main(int ac, char **av)
 {
 	(void)(ac);
 
-	if (strcmp(av[1], "config_check_directory") == 0) {
-		return config_check_directory_wrapper(av);
+	if (strcmp(av[1], "config_ensure_directory") == 0) {
+		return config_ensure_directory_wrapper(av);
 	} else if (strcmp(av[1], "config_resolve_character_set") == 0) {
 		return config_resolve_character_set_wrapper(av);
 	} else {
